# anbima_calendar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  a.txt  pyproject.toml  setup.py
anbima_calendar/: __init__.py  date.py  errors.py  holidays.py
docs/: Makefile
docs/source/: anbima_calendar.rst  conf.py  examples.rst  index.rst  introduction.rst
scripts/: anbima.csv  load_data.py
tests/: test_date.py
