[tool.poetry]
name = "anbima_calendar"
version = "0.0.2"
description = "Helper functions to handle banking holidays in Brazil"
authors = ["Rispar <tecnologia@rispar.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
twine = "^4.0.0"
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
