[tool.poetry]
name = "anbima_calendar"
version = "0.1.0"
description = "Helper functions to handle banking holidays in Brazil"
authors = ["Rafael Izidoro <izidoro.me@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ipython = "^8.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
